apps/edge-services/paperless/manifests/paperless-external.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-external
  namespace: edge-services
  labels:
    external-dns.edgard.org/scope: external
    hajimari.edgard.org/enabled: "true"
    hajimari.edgard.org/icon: file-document-outline
spec:
  parentRefs:
    - name: external
      namespace: platform-system
      sectionName: https
  hostnames:
    - paperless.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless
          port: 8000
